--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Tasks with Friends</title>
 
-    <link id="tailwind" href="tailwind.css" rel="stylesheet" />
+    <link id="tailwind" href="/tailwind.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app-root"></div>
